# claude-sandbox2

./: .copier-answers.yml  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README-CLAUDE.md  README.md  install  justfile  pyproject.toml
.claude/: settings.json
.claude/commands/: toolbox.md  verify-sandbox.md
.claude/skills/claude-sandbox/: SKILL.md
.devcontainer/: devcontainer.json  initializeCommand.sh  postCreate.sh
.devcontainer/claude-sandbox/: claude-shadow  install.sh  promote.sh
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  run-verify-in-bwrap.sh
src/claude_sandbox/: __init__.py  __main__.py  cli.py  gitconfig.py  installer.py  probe.py  settings_merger.py  skill_installer.py  verifier.py
src/claude_sandbox/data/: bundles.toml  bwrap_argv.sh  claude-shadow
tests/: bwrap_argv.sh  conftest.py  promote.sh  smoke.sh  test_bwrap_argv.py  test_bwrap_argv_bash.py  test_cli.py  test_gitconfig.py  test_installer.py  test_probe.py  test_settings_merge.py  test_settings_merger.py  test_skill_installer.py  test_verifier.py
