[project]
name = "claude-sandbox"
version = "0.1.0"
description = "bwrap-isolated Claude Code installer for rootless-podman + Debian/Ubuntu devcontainers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Giles Knap", email = "gilesknap@gmail.com" },
]
dependencies = [
    "typer>=0.12",
]

[project.scripts]
claude-sandbox = "claude_sandbox.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sandbox"]

[tool.hatch.build.targets.wheel.force-include]
"src/claude_sandbox/data/claude-shadow" = "claude_sandbox/data/claude-shadow"
"src/claude_sandbox/data/bwrap_argv.sh" = "claude_sandbox/data/bwrap_argv.sh"
"src/claude_sandbox/data/bundles.toml" = "claude_sandbox/data/bundles.toml"

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_sandbox",
    "PRD.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
